fixed button not horizontal align on mobile

--- a/docs/_sass/jekyll-theme-cayman.scss
+++ b/docs/_sass/jekyll-theme-cayman.scss
@@ -30,7 +30,7 @@
 }
 
 /* If mobile device, lock screen */
-@media screen and (max-width: #{$large-breakpoint}) {
+@media screen and (min-width: 320px) and (max-width: 767px) and (orientation: landscape) {
   html {
     transform: rotate(-90deg);
     transform-origin: left top;
@@ -85,8 +85,6 @@ a {
 
 .btn {
   display: flex;
-  justify-content: center;
-  text-align: center;
   margin-bottom: 1rem;
   color: rgba(255, 255, 255, 0.7);
   background-color: rgba(255, 255, 255, 0.08);
